--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ header ul a {
 }
 
 .hero {
-    background-image: url(../images/forest.png);
+    background-image: url(/images/forest.png);
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
