--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,17 @@ section {
     background-repeat: no-repeat;
 }
 
+
+.portfolio .tkpara {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('../images/tk.png');
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
+}
+
+
 .portfolio h1 {
     margin: -50px 0 0 0;
     font-size: 9vw;
@@ -298,6 +309,17 @@ footer {
 .rounded {
     border-radius: 5px;
 }
+
+.tk{
+    margin-top: 25px;
+    margin-right: 10px;
+}
+
+.tcwgfg{
+    width: 40vw;
+    padding-left: 150px;
+}
+
 
 @media only screen and (min-width: 800px) {
     .featured h1 {
@@ -487,7 +509,9 @@ footer {
     .social-header {
         padding: 2em 10em 2em 0;
     }
-    
+    section {
+        padding: 10em 10em 4em 10em;
+    }
     .hero .content {
         padding: 6em 8em 6em 10em;
     }
@@ -507,6 +531,7 @@ footer {
         padding: 6em 8em 6em 20em;
     }
 }
+
 
 
 /*# sourceMappingURL=main.css.map */
